fix: resolve Alembic migration chain issues
Fixed down_revision in migration 004 to use full ID

Added deploy scripts with automatic migrations

Added comprehensive MIGRATIONS_GUIDE.md

--- a/БЫСТРОЕ_ОБНОВЛЕНИЕ.md
+++ b/БЫСТРОЕ_ОБНОВЛЕНИЕ.md
@@ -9,15 +9,16 @@
 ```bash
 ssh user@ваш_IP
 cd ~/telegram_repair_bot
-bash scripts/update_bot.sh
+bash scripts/deploy_with_migrations.sh
 ```
 
 ✅ **Готово!** Скрипт:
 - Создаст backup БД
 - Получит обновления из Git
 - Пересоберёт Docker образ
-- Применит миграции
+- Применит миграции через Alembic (с fallback на Python)
 - Перезапустит бота
+- Проверит статус
 
 ---
 
